@@ -41,10 +41,10 @@ import com.hederahashgraph.api.proto.java.Transaction;
 import com.hederahashgraph.api.proto.java.TransactionBody;
 import com.hederahashgraph.api.proto.java.TransactionID;
 import com.hederahashgraph.api.proto.java.TransactionRecord;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import java.text.MessageFormat;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HexFormat;
@@ -81,7 +81,6 @@ public abstract class HapiSpecOperation implements SpecOperation {
     protected Transaction txnSubmitted;
     protected TransactionRecord recordOfSubmission;
 
-    protected FeeBuilder fees = new FeeBuilder();
     protected FileFeeBuilder fileFees = new FileFeeBuilder();
     protected CryptoFeeBuilder cryptoFees = new CryptoFeeBuilder();
     protected SmartContractFeeBuilder scFees = new SmartContractFeeBuilder();
@@ -202,7 +201,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
         return fromPbj(nodes.get(r.nextInt(nodes.size())).getAccountId());
     }
 
-    public Optional<Throwable> execFor(final HapiSpec spec) {
+    public Optional<Throwable> execFor(final @NonNull HapiSpec spec) {
         configureProtoStructureFor(spec);
         try {
             final boolean hasCompleteLifecycle = submitOp(spec);
@@ -389,14 +388,12 @@ public abstract class HapiSpecOperation implements SpecOperation {
                 : spec.keys().sign(spec, builder, keys, overrides);
     }
 
-    public Map<Key, SigControl> setKeyControlOverrides(final HapiSpec spec) {
+    public void setKeyControlOverrides(final HapiSpec spec) {
         if (controlOverrides.isPresent()) {
             overrides = new HashMap<>();
             Stream.of(controlOverrides.get())
                     .forEach(c -> overrides.put(lookupKey(spec, c.getKeyName()), c.getController()));
-            return overrides;
         }
-        return Collections.emptyMap();
     }
 
     public List<Key> signersToUseFor(final HapiSpec spec) {
@@ -404,7 +401,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
                 .map(f -> f.apply(spec))
                 .filter(k -> k != null && k != Key.getDefaultInstance())
                 .collect(toList());
-        if (!signers.isPresent()) {
+        if (signers.isEmpty()) {
             active.addAll(variableDefaultSigners().apply(spec));
         }
         return active;
@@ -415,7 +412,7 @@ public abstract class HapiSpecOperation implements SpecOperation {
     }
 
     protected List<Function<HapiSpec, Key>> defaultSigners() {
-        return Arrays.asList(spec -> spec.registry().getKey(effectivePayer(spec)));
+        return List.of(spec -> spec.registry().getKey(effectivePayer(spec)));
     }
 
     protected Function<HapiSpec, List<Key>> variableDefaultSigners() {
